--- a/content/registrasi/pendaftaran-pemberkatan-nikah.html
+++ b/content/registrasi/pendaftaran-pemberkatan-nikah.html
@@ -6,117 +6,128 @@ layout = "default"
 draft = false
 +++
 
-<form class="row g-3" name="pemberkatan-nikah" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+<form 
+    class="row g-3" 
+    action="/sukses" 
+    name="pemberkatan-nikah" 
+    method="POST" 
+    data-netlify="true" 
+    netlify-honeypot="bot-field"
+    class="needs-validation" 
+    novalidate
+    >
     <div class="hidden col-12">
         <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
     </div>
     <div class="col-6 mb-3">
-        <label for="el-tempatpemberkatan" class="form-label">Tempat Pemberkatan Nikah</label>
-        <input type="text" class="form-control" name="el-tempatpemberkatan" value="GBI Pusat Perakitan" readonly>
+        <label for="tempat-pemberkatan" class="form-label">Tempat Pemberkatan Nikah</label>
+        <input type="text" class="form-control" name="tempat-pemberkatan" value="GBI Pusat Perakitan" readonly />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-haripemberkatan" class="form-label">Hari Pemberkatan Nikah</label>
-        <input type="text" class="form-control" name="el-haripemberkatan">
+        <label for="hari-pemberkatan" class="form-label">Hari Pemberkatan Nikah</label>
+        <input type="text" class="form-control" name="hari-pemberkatan" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-tglpemberkatan" class="form-label">Tanggal Pemberkatan Nikah</label>
-        <input type="datetime-local" class="form-control" name="el-tglpemberkatan">
+        <label for="tanggal-pemberkatan" class="form-label">Tanggal Pemberkatan Nikah</label>
+        <input type="datetime-local" class="form-control" name="tanggal-pemberkatan" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-kotapemberkatan" class="form-label">Kota Pemberkatan Nikah</label>
-        <input type="text" class="form-control" name="el-kotapemberkatan">
+        <label for="kota-pemberkatan" class="form-label">Kota Pemberkatan Nikah</label>
+        <input type="text" class="form-control" name="kota-pemberkatan" required />
     </div>
+    <hr />
     <div class="col-12 mb-3">
-        <label for="el-namalengkappria" class="form-label">Nama Lengkap Mempelai Pria</label>
-        <input type="text" class="form-control" name="el-namalengkappria">
+        <label for="nama-lengkap-mempelai-pria" class="form-label">Nama Lengkap Mempelai Pria</label>
+        <input type="text" class="form-control" name="nama-lengkap-mempelai-pria" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-harilahirpria" class="form-label">Tempat Lahir Mempelai Pria</label>
-        <input type="text" class="form-control" name="el-harilahirpria">
+        <label for="tempat-lahir-mempelai-pria" class="form-label">Tempat Lahir Mempelai Pria</label>
+        <input type="text" class="form-control" name="tempat-lahir-mempelai-pria" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-tgllahirpria" class="form-label">Tanggal Lahir Mempelai Pria</label>
-        <input type="date" class="form-control" name="el-tgllahirpria">
+        <label for="tanggal-lahir-mempelai-pria" class="form-label">Tanggal Lahir Mempelai Pria</label>
+        <input type="date" class="form-control" name="tanggal-lahir-mempelai-pria" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-tempatbaptispria" class="form-label">Tempat Baptis Mempelai Pria (Nama Gereja)</label>
-        <input type="text" class="form-control" name="el-tempatbaptispria">
+        <label for="tempat-baptis-mempelai-pria" class="form-label">Tempat Baptis Mempelai Pria (Nama Gereja)</label>
+        <input type="text" class="form-control" name="tempat-baptis-mempelai-pria" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-haribaptispria" class="form-label">Tanggal Baptis Mempelai Pria</label>
-        <input type="date" class="form-control" name="el-harilahirpria">
+        <label for="tanggal-baptis-mempelai-pria" class="form-label">Tanggal Baptis Mempelai Pria</label>
+        <input type="date" class="form-control" name="tanggal-baptis-mempelai-pria" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-phonepria" class="form-label">Telp/HP Mempelai Pria</label>
+        <label for="no-hp-mempelai-pria" class="form-label">Telp/HP Mempelai Pria</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adphonepria">+62</span>
-            <input type="text" class="form-control" name="el-phonepria" aria-describedby="el-adphonepria">
+            <input type="text" class="form-control" name="no-hp-mempelai-pria" aria-describedby="el-adphonepria" required />
         </div>
     </div>
     <div class="col-6 mb-3">
-        <label for="el-whatsapppria" class="form-label">WhatsApp Mempelai Pria</label>
+        <label for="whatsapp-mempelai-pria" class="form-label">WhatsApp Mempelai Pria</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adwhatsapppria">+62</span>
-            <input type="text" class="form-control" name="el-whatsapppria" aria-describedby="el-adwhatsapppria">
+            <input type="text" class="form-control" name="whatsapp-mempelai-pria" aria-describedby="el-adwhatsapppria" />
         </div>
     </div>
     <div class="col-12 mb-3">
-        <label for="el-alamatpria" class="form-label">Alamat Mempelai Pria</label>
-        <input type="text" class="form-control" name="el-alamatpria">
+        <label for="alamat-mempelai-pria" class="form-label">Alamat Mempelai Pria</label>
+        <input type="text" class="form-control" name="alamat-mempelai-pria" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-namaayahpria" class="form-label">Nama Ayah Mempelai Pria</label>
-        <input type="text" class="form-control" name="el-namaayahpria">
+        <label for="nama-ayah-mempelai-pria" class="form-label">Nama Ayah Mempelai Pria</label>
+        <input type="text" class="form-control" name="nama-ayah-mempelai-pria" />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-namaibupria" class="form-label">Nama Ibu Mempelai Pria</label>
-        <input type="text" class="form-control" name="el-namaibupria">
+        <label for="nama-ibu-mempelai-pria" class="form-label">Nama Ibu Mempelai Pria</label>
+        <input type="text" class="form-control" name="nama-ibu-mempelai-pria" />
     </div>
+    <hr />
     <div class="col-12 mb-3">
-        <label for="el-namalengkapperempuan" class="form-label">Nama Lengkap Mempelai Perempuan</label>
-        <input type="text" class="form-control" name="el-namalengkapperempuan">
+        <label for="nama-lengkap-mempelai-perempuan" class="form-label">Nama Lengkap Mempelai Perempuan</label>
+        <input type="text" class="form-control" name="nama-lengkap-mempelai-perempuan" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-harilahirperempuan" class="form-label">Tempat Lahir Mempelai Perempuan</label>
-        <input type="text" class="form-control" name="el-harilahirperempuan">
+        <label for="tempat-lahir-mempelai-perempuan" class="form-label">Tempat Lahir Mempelai Perempuan</label>
+        <input type="text" class="form-control" name="tempat-lahir-mempelai-perempuan" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-tgllahirperempuan" class="form-label">Tanggal Lahir Mempelai Perempuan</label>
-        <input type="date" class="form-control" name="el-tgllahirperempuan">
+        <label for="tanggal-lahir-mempelai-perempuan" class="form-label">Tanggal Lahir Mempelai Perempuan</label>
+        <input type="date" class="form-control" name="tanggal-lahir-mempelai-perempuan" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-tempatbaptisperempuan" class="form-label">Tempat Baptis Mempelai Perempuan (Nama Gereja)</label>
-        <input type="text" class="form-control" name="el-tempatbaptisperempuan">
+        <label for="tempat-baptis-mempelai-perempuan" class="form-label">Tempat Baptis Mempelai Perempuan (Nama Gereja)</label>
+        <input type="text" class="form-control" name="tempat-baptis-mempelai-perempuan" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-haribaptisperempuan" class="form-label">Tanggal Baptis Mempelai Perempuan</label>
-        <input type="date" class="form-control" name="el-harilahirperempuan">
+        <label for="tanggal-baptis-mempelai-perempuan" class="form-label">Tanggal Baptis Mempelai Perempuan</label>
+        <input type="date" class="form-control" name="tanggal-baptis-mempelai-perempuan" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-phoneperempuan" class="form-label">Telp/HP Mempelai Perempuan</label>
+        <label for="no-hp-mempelai-perempuan" class="form-label">Telp/HP Mempelai Perempuan</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adphoneperempuan">+62</span>
-            <input type="text" class="form-control" name="el-phoneperempuan" aria-describedby="el-adphoneperempuan">
+            <input type="text" class="form-control" name="no-hp-mempelai-perempuan" aria-describedby="el-adphoneperempuan" required />
         </div>
     </div>
     <div class="col-6 mb-3">
-        <label for="el-whatsappperempuan" class="form-label">WhatsApp Mempelai Perempuan</label>
+        <label for="whatsapp-mempelai-perempuan" class="form-label">WhatsApp Mempelai Perempuan</label>
         <div class="input-group mb-3">
             <span class="input-group-text" id="el-adwhatsappperempuan">+62</span>
-            <input type="text" class="form-control" name="el-whatsappperempuan" aria-describedby="el-adwhatsappperempuan">
+            <input type="text" class="form-control" name="whatsapp-mempelai-perempuan" aria-describedby="el-adwhatsappperempuan" />
         </div>
     </div>
     <div class="col-12 mb-3">
-        <label for="el-alamatperempuan" class="form-label">Alamat Mempelai Perempuan</label>
-        <input type="text" class="form-control" name="el-alamatperempuan">
+        <label for="alamat-mempelai-perempuan" class="form-label">Alamat Mempelai perempuan</label>
+        <input type="text" class="form-control" name="alamat-mempelai-perempuan" required />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-namaayahperempuan" class="form-label">Nama Ayah Mempelai Perempuan</label>
-        <input type="text" class="form-control" name="el-namaayahperempuan">
+        <label for="nama-ayah-mempelai-perempuan" class="form-label">Nama Ayah Mempelai Perempuan</label>
+        <input type="text" class="form-control" name="nama-ayah-mempelai-perempuan" />
     </div>
     <div class="col-6 mb-3">
-        <label for="el-namaibuperempuan" class="form-label">Nama Ibu Mempelai Perempuan</label>
-        <input type="text" class="form-control" name="el-namaibuperempuan">
+        <label for="nama-ibu-mempelai-perempuan" class="form-label">Nama Ibu Mempelai Perempuan</label>
+        <input type="text" class="form-control" name="nama-ibu-mempelai-perempuan" />
     </div>
     <div class="col-12">
         <button class="btn btn-primary" type="submit">Kirim</button>
